--- a/spec/index.html
+++ b/spec/index.html
@@ -2591,7 +2591,9 @@ markEffects: true
         1. Assert: _mutex_ has a [[MutexWaiterList]] internal slot.
         1. If _token_ is *undefined*, then
           1. Set _token_ to OrdinaryObjectCreate(%MutexUnlockTokenPrototype%, « [[LockedMutex]] »).
-        1. Assert: _token_ has a [[LockedMutex]] internal slot.
+        1. Else,
+          1. Assert: _token_ has a [[LockedMutex]] internal slot.
+          1. Assert: _token_.[[LockedMutex]] is ~empty~.
         1. Set _token_.[[LockedMutex]] to _mutex_.
         1. Return _token_.
       </emu-alg>
@@ -2601,7 +2603,7 @@ markEffects: true
       <h1>
         LockMutex (
           _mutex_: an Object,
-          _t_: a mathematical value,
+          _tMillis_: a mathematical value,
         ) : ~acquired~ or ~timed-out~
       </h1>
       <dl class="header">
@@ -2618,8 +2620,8 @@ markEffects: true
         1. Let _thisAgent_ be AgentSignifier().
         1. Let _now_ be the time value (UTC) identifying the current time.
         1. Let _additionalTimeout_ be an implementation-defined non-negative mathematical value.
-        1. Let _timeoutTime_ be ℝ(_now_) + _t_ + _additionalTimeout_.
-        1. NOTE: When _t_ is +∞, _timeoutTime_ is also +∞.
+        1. Let _timeoutTime_ be ℝ(_now_) + _tMillis_ + _additionalTimeout_.
+        1. NOTE: When _tMillis_ is +∞, _timeoutTime_ is also +∞.
         1. Let _done_ be *false*.
         1. Repeat, while _done_ is *false*,
           1. Let _waiterRecord_ be a new Waiter Record { [[AgentSignifier]]: _thisAgent_, [[PromiseCapability]]: ~blocking~, [[TimeoutTime]]: _timeoutTime_, [[Result]]: *"ok"* }.
@@ -2711,9 +2713,9 @@ markEffects: true
           1. If _unlockToken_.[[LockedMutex]] is not ~empty~, throw a *TypeError* exception.
         1. If _timeout_ is *undefined*, set _timeout_ to *+∞*<sub>𝔽</sub>.
         1. If _timeout_ is not a Number, throw a *TypeError* exception.
-        1. If _timeout_ is either *NaN* or *+∞*<sub>𝔽</sub>, let _t_ be +∞; else if _timeout_ is *-∞*<sub>𝔽</sub>, let _t_ be 0; else let _t_ be max(ℝ(_timeout_), 0).
+        1. If _timeout_ is either *NaN* or *+∞*<sub>𝔽</sub>, let _tMillis_ be +∞; else if _timeout_ is *-∞*<sub>𝔽</sub>, let _tMillis_ be 0; else let _tMillis_ be max(ℝ(_timeout_), 0).
         1. If AgentCanSuspend() is *false*, throw a *TypeError* exception.
-        1. Let _result_ be LockMutex(_mutex_, _t_).
+        1. Let _result_ be LockMutex(_mutex_, _tMillis_).
         1. If _result_ is ~acquired~, then
           1. Return UnlockTokenCreateIfNeeded(_unlockToken_, _mutex_).
         1. Else,
@@ -2738,7 +2740,7 @@ markEffects: true
           1. Set _mutex_.[[IsLocked]] to *true*.
           1. Let _result_ be UnlockTokenCreateIfNeeded(_unlockToken_, _mutex_).
         1. Else,
-          1. Let _result_ be *undefined*.
+          1. Let _result_ be *"already-locked"*.
         1. Perform LeaveCriticalSection(_WL_).
         1. Return _result_.
       </emu-alg>
@@ -2754,9 +2756,9 @@ markEffects: true
         1. If AgentCanSuspend() is *false*, throw a *TypeError* exception.
         1. Let _lockResult_ be LockMutex(_mutex_, +∞).
         1. Assert: _lockResult_ is ~acquired~.
-        1. Let _callbackResult_ be ? Call(_callback_, _thisArg_, « »).
+        1. Let _callbackResult_ be Completion(Call(_callback_, _thisArg_, « »)).
         1. Perform UnlockMutex(_mutex_).
-        1. Return _callbackResult_.
+        1. Return Completion(_callbackResult_).
       </emu-alg>
     </emu-clause>
   </emu-clause>
@@ -2770,6 +2772,16 @@ markEffects: true
       <li>has the following properties:</li>
     </ul>
 
+    <emu-clause id="sec-get-%mutexunlocktokenprototype%.locked">
+      <h1>get %MutexUnlockTokenPrototype%.locked</h1>
+      <p>%MutexUnlockTokenPrototype%.locked is an accessor property whose set accessor is *undefined*. Its get accessor function performs the following steps when called:</p>
+      <emu-alg>
+        1. Let _token_ be the *this* value.
+        1. Perform ? RequireInternalSlot(_token_, [[LockedMutex]]).
+        1. If _token_.[[LockedMutex]] is ~empty~, return *false*; else return *true*.
+      </emu-alg>
+    </emu-clause>
+
     <emu-clause id="sec-%mutexunlocktokenprototype%.unlock">
       <h1>%MutexUnlockTokenPrototype%.unlock ( )</h1>
       <p>This function performs the following steps when called:</p>
@@ -2781,7 +2793,8 @@ markEffects: true
         1. If _mutex_ is not ~empty~, then
           1. Set _token_.[[LockedMutex]] to ~empty~.
           1. Perform UnlockMutex(_mutex_).
-        1. Return *undefined*.
+          1. Return *true*.
+        1. Return *false*.
       </emu-alg>
     </emu-clause>
   </emu-clause>
