Fix %Mutex% -> %Atomics.Mutex% (and condition)

--- a/spec/index.html
+++ b/spec/index.html
@@ -2668,7 +2668,7 @@ markEffects: true
     <h1>The Mutex Constructor</h1>
     <p>The Mutex constructor:</p>
     <ul>
-      <li>is <dfn>%Mutex%</dfn>.</li>
+      <li>is <dfn>%Atomics.Mutex%</dfn>.</li>
       <li>is the initial value of the *"Mutex"* property of the %Atomics% object.</li>
       <li>creates and initializes a new Mutex when called as constructor.</li>
       <li>is not intended to be called as a function and will throw an exception when called in that manner.</li>
@@ -2797,7 +2797,7 @@ markEffects: true
     <h1>The Condition Constructor</h1>
     <p>The Condition constructor:</p>
     <ul>
-      <li>is <dfn>%Condition%</dfn>.</li>
+      <li>is <dfn>%Atomics.Condition%</dfn>.</li>
       <li>is the initial value of the *"Condition"* property of the %Atomics% object.</li>
       <li>creates and initializes a new Condition when called as constructor.</li>
       <li>is not intended to be called as a function and will throw an exception when called in that manner.</li>
