Add Symbol.dispose to UnlockToken

--- a/spec/index.html
+++ b/spec/index.html
@@ -2839,6 +2839,11 @@ markEffects: true
           1. Return *false*.
         </emu-alg>
       </emu-clause>
+
+      <emu-clause id="sec-atomics.mutex.unlocktoken.prototype.%symbol.dispose%">
+        <h1>Atomics.Mutex.UnlockToken.prototype [ %Symbol.dispose% ] ( )</h1>
+        <p>The initial value of the %Symbol.dispose% property is %Atomics.Mutex.UnlockToken.prototype.unlock%, defined in <emu-xref href="#sec-atomics.mutex.unlocktoken.prototype.unlock"></emu-xref>.</p>
+      </emu-clause>
     </emu-clause>
   </emu-clause>
 
